--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Olá Mundo! kkk</h1>
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
