criando a pasta css e add roda pé

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 
     </section>
     <footer>
-        
+        <div>
+            <p>integrantes</p>
+            <ul>
+                <li>Derick S. / rm551007</li>
+                <li>Razyel Ferrari / rm551875</li>
+                <li>Rayzor Anael / rm551832</li>
+                <li>Kalel Schlichting / rm550620</li>
+                <li>Jerry Bryan / rm98438</li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
