--- a/paginas/agricultura sustentável.html
+++ b/paginas/agricultura sustentável.html
@@ -21,8 +21,10 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section class="conteudo">
+        <div class="conteudo-tit">
         <h2>agricultura sustentável</h2>
+        </div>
         <div>
             <p>
                 A agricultura sustentável é um conceito que busca conciliar a produção de alimentos e recursos naturais com a preservação do meio ambiente, a promoção da equidade social e a viabilidade econômica. É uma abordagem que visa atender às necessidades das gerações atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
@@ -57,8 +59,17 @@
                 A agricultura sustentável desempenha um papel importante na mitigação das mudanças climáticas, na conservação dos recursos naturais e na promoção da segurança alimentar global. Além disso, ela contribui para a melhoria da qualidade de vida das comunidades rurais e para a promoção de sistemas alimentares mais justos e saudáveis.</p>
         </div>
     </section>
-    <footer>
-
+    <footer class="roda-pe">
+        <div>
+            <p>integrantes</p>
+            <ul>
+                <li>Derick S. / rm551007</li>
+                <li>Razyel Ferrari / rm551875</li>
+                <li>Rayzor Anael / rm551832</li>
+                <li>Kalel Schlichting / rm550620</li>
+                <li>Jerry Bryan / rm98438</li>
+            </ul>
+        </div>
     </footer>
     
 </body>
