adicionando conteudo e ancora adicionado na pagina: modelo de culivo

--- a/paginas/modelos de cultivo eficientes.html
+++ b/paginas/modelos de cultivo eficientes.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <div class="logo">
+
+        </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="formulario.html">FORMULARIO</a></li>
+                <li><a href="agricultura sustentável.html">AGRICULTIRA SUSTENTAVEL</a></li>
+                <li><a href="Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="conteudo">
+        <div class="conteudo-tit">
+        <h2>agricultura sustentável</h2>
+        </div>
+        <p>
+            Os modelos de cultivo eficientes são abordagens agrícolas que visam maximizar a produção de alimentos enquanto otimizam o uso de recursos naturais, como água, fertilizantes, energia e terra. Esses modelos são baseados em conhecimentos científicos e tecnologias avançadas, buscando melhorar a produtividade agrícola de forma sustentável.
+        </p>
+        <p>
+            Alguns exemplos de modelos de cultivo eficientes incluem a agricultura de precisão, que utiliza tecnologias para monitorar as condições do solo e das culturas, permitindo a aplicação precisa de insumos agrícolas. A agricultura vertical envolve o cultivo em camadas verticais, economizando espaço e recursos. A hidroponia cultiva plantas sem solo, fornecendo nutrientes através de soluções aquosas. A aquaponia integra a criação de peixes com o cultivo de plantas, promovendo a reciclagem de nutrientes. A agrofloresta combina árvores, culturas agrícolas e criação de animais em um sistema integrado e sustentável. A rotação de culturas alterna diferentes culturas ao longo do tempo, trazendo benefícios para a saúde do solo e controle de pragas.
+        </p>
+        <p>
+            Esses modelos de cultivo eficientes promovem o uso mais racional dos recursos, reduzem o desperdício, aumentam a produtividade e favorecem a sustentabilidade da agricultura. Eles são adaptáveis às condições locais e contribuem para a conservação do meio ambiente, a segurança alimentar e a produção responsável de alimentos.
+        </p>
+     
+        </div>
+    </section>
+    <footer class="roda-pe">
+        <div>
+            <p>integrantes</p>
+            <ul>
+                <li>Derick S. / rm551007</li>
+                <li>Razyel Ferrari / rm551875</li>
+                <li>Rayzor Anael / rm551832</li>
+                <li>Kalel Schlichting / rm550620</li>
+                <li>Jerry Bryan / rm98438</li>
+            </ul>
+        </div>
+    </footer>
     
 </body>
 </html>
