--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        
+    <header class="cabecalho">
+        <div class="logo">
 
+        </div>
+        <nav>
+            <ul>
+                <li><a href="paginas/agricultura sustentável.html">Agricultura Sustentavel</a></li>
+                <li><a href="formulario.html">FORMULARIO</a></li>
+                <li><a href="Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
+                <li><a href="modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
+            </ul>
+        </nav>
     </header>
     <section>
 
