--- a/paginas/Inteligências Artificiais generativas.html
+++ b/paginas/Inteligências Artificiais generativas.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="formulario.html">FORMULARIO</a></li>
-                <li><a href="agricultura sustentável.html">Inteligências ARTIFICIAS</a></li>
+                <li><a href="agricultura sustentável.html">Agricultura Sustentavel</a></li>
                 <li><a href="modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
             </ul>
         </nav>
