ancoras renomeadas para funcionalidade

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li><a href="paginas/agricultura sustentável.html">Agricultura Sustentavel</a></li>
-                <li><a href="formulario.html">FORMULARIO</a></li>
-                <li><a href="Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
-                <li><a href="modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
+                <li><a href="paginas/formulario.html">FORMULARIO</a></li>
+                <li><a href="paginas/Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
+                <li><a href="paginas/modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
             </ul>
         </nav>
     </header>
