--- a/paginas/formulario.html
+++ b/paginas/formulario.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header class="cabecalho">
+        <div class="logo">
+
+        </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="agricultura sustentável.html">Agricultura Sustentavel</a></li>
+                <li><a href="Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
+                <li><a href="modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
