teste no design

--- a/paginas/agricultura sustentável.html
+++ b/paginas/agricultura sustentável.html
@@ -25,7 +25,7 @@
         <div class="conteudo-tit">
         <h2>agricultura sustentável</h2>
         </div>
-        <div>
+        <div class="texto">
             <p>
                 A agricultura sustentável é um conceito que busca conciliar a produção de alimentos e recursos naturais com a preservação do meio ambiente, a promoção da equidade social e a viabilidade econômica. É uma abordagem que visa atender às necessidades das gerações atuais sem comprometer a capacidade das futuras gerações de atenderem às suas próprias necessidades.</p>
                 
