adicionando conteudo na index

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 </head>
 <body>
     <header class="cabecalho">
-        <div class="logo">
-
-        </div>
         <nav>
             <ul>
                 <li><a href="paginas/agricultura sustentável.html">Agricultura Sustentavel</a></li>
@@ -21,9 +18,38 @@
             </ul>
         </nav>
     </header>
-    <section>
 
+    <main>
+    <section class="conteudo">
+      <h1>Welcome to Cow Signals</h1>
+      <p>Improving cow health and welfare</p>
     </section>
+
+    <section class="card">
+      <div class="card">
+        <img src="img/man-taking-care-his-farm-close-up.jpg" alt="Feature 1">
+        <h2>Feature 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="card">
+        <img src="img/man-taking-care-his-farm-close-up.jpg" alt="Feature 2">
+        <h2>Feature 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="card">
+        <img src="img/man-taking-care-his-farm-close-up.jpg" alt="Feature 3">
+        <h2>Feature 3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+    </section>
+
+    <section class="testimonial">
+      <blockquote>
+        <p>"I've seen a tremendous improvement in my cow's health after implementing Cow Signals' techniques. Highly recommended!"</p>
+        <cite>- John Doe, Dairy Farmer</cite>
+      </blockquote>
+    </section>
+  </main>
     <footer>
         <div>
             <p>integrantes</p>
