add gitignore/ add estilo na index

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
   </main>
     <footer>
-        <div>
+        <div class="roda-pe">
             <p>integrantes</p>
             <ul>
                 <li>Derick S. / rm551007</li>
