add imagens e alterando nomes

--- a/index.html
+++ b/index.html
@@ -13,40 +13,41 @@
             <ul>
                 <li><a href="paginas/agricultura sustentável.html">Agricultura Sustentavel</a></li>
                 <li><a href="paginas/formulario.html">FORMULARIO</a></li>
-                <li><a href="paginas/Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
-                <li><a href="paginas/modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
+                <li><a href="paginas/Inteligências Artificiais generativas.html">Inteligências Artificiais</a></li>
+                <li><a href="paginas/modelos de cultivo eficientes.html">modelos de cultivo</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
     <section class="conteudo">
-      <h1>Welcome to Cow Signals</h1>
-      <p>Improving cow health and welfare</p>
+      <h1>Bem-vindo</h1>
+      <p>Melhorando a saúde e o bem-estar</p>
+      <a href="#" class="btn">saber mais</a>
     </section>
 
-    <section class="card">
+    <section class="cards">
       <div class="card">
         <img src="img/agricultura-sustentavel.jpg" alt="Feature 1">
-        <h2>Feature 1</h2>
+        <h2>Agricultura Sustentavel</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="card">
-        <img src="img/man-taking-care-his-farm-close-up.jpg" alt="Feature 2">
-        <h2>Feature 2</h2>
+        <img src="img/ai-cloud-concept-with-robot-arm.jpg" alt="Inteligências Artificiais">
+        <h2>Inteligências ARTIFICIAS</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="card">
-        <img src="img/man-taking-care-his-farm-close-up.jpg" alt="Feature 3">
-        <h2>Feature 3</h2>
+        <img src="img/senior-hardworking-farmer-agronomist-soybean-field-checking-crops-before-harvest.jpg" alt="modelos de cultivo">
+        <h2>modelos de cultivo</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </section>
 
     <section class="testimonial">
       <blockquote>
-        <p>"I've seen a tremendous improvement in my cow's health after implementing Cow Signals' techniques. Highly recommended!"</p>
-        <cite>- John Doe, Dairy Farmer</cite>
+        <p>"Eu vi uma tremenda melhora na minha saúde depois de implementar as técnicas da ######. Altamente recomendado!"</p>
+        <cite>- Derick Santos, o brabo</cite>
       </blockquote>
     </section>
   </main>
