resumo dos conteudo alterados

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-    <section class="conteudo">
+    <section class="conteudo-back">
       <h1>Bem-vindo</h1>
       <p>Melhorando a saúde e o bem-estar</p>
       <a href="#" class="btn">saber mais</a>
