ajustando layout da pagina: agricultura sustentavel

--- a/paginas/agricultura sustentável.html
+++ b/paginas/agricultura sustentável.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <section class="conteudo-back">
+    <section class="conteudo-back2">
         <h1>agricultura sustentável</h1>
         <p>Tudo sobre agricultura sustentável</p>
 
@@ -36,7 +36,7 @@
             </p>
             </div>
     </section>
-    <footer class="roda-pe">
+    <footer class="roda-pe2">
         <div>
             <p>integrantes</p>
             <ul>
