style da pag: Inteligências Artificiais generativas

--- a/paginas/Inteligências Artificiais generativas.html
+++ b/paginas/Inteligências Artificiais generativas.html
@@ -21,17 +21,21 @@
             </ul>
         </nav>
     </header>
-    <section class="conteudo">
+    <section class="conteudo-back3">
         <div class="conteudo-tit">
         <h2>Inteligências Artificiais Generativas</h2>
-        </div>
+        <p>Lorem ipsurum deserunt accusamus fugiat quisquam voluptates accusantium?</p>
+        </section>
+        <section class="conteudo">
+        </div class="conteudo-tit">
+        <h2>Inteligências Artificiais generativas</h2>
         <div>
             <p>
                 As Inteligências Artificiais generativas são sistemas de inteligência artificial que têm a capacidade de gerar conteúdo original, como textos, imagens, músicas e vídeos. Elas são treinadas em grandes conjuntos de dados e aprendem a reconhecer padrões e tendências para criar conteúdo novo. Essas AI generativas são aplicadas em áreas como escrita criativa, design, música, jogos e muito mais. Embora tenham limitações, elas estão avançando rapidamente e têm o potencial de impulsionar a inovação e a criatividade em diversas indústrias.
             </p>
         </div>
     </section>
-    <footer class="roda-pe">
+    <footer class="roda-pe2">
         <div>
             <p>integrantes</p>
             <ul>
