style da pagina: modelo de cultivo

--- a/paginas/modelos de cultivo eficientes.html
+++ b/paginas/modelos de cultivo eficientes.html
@@ -21,9 +21,13 @@
             </ul>
         </nav>
     </header>
-    <section class="conteudo">
+    <section class="conteudo-back4">
+        <h1>modelos de cultivo</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </section>    
+        <section class="conteudo">
         <div class="conteudo-tit">
-        <h2>agricultura sustentável</h2>
+        <h2>modelos de cultivo</h2>
         </div>
         <p>
             Os modelos de cultivo eficientes são estratégias agrícolas que visam maximizar a produção de alimentos de forma sustentável, otimizando o uso de recursos naturais. Esses modelos incluem abordagens como agricultura de precisão, hidroponia, agricultura vertical, aquaponia, agrofloresta e rotação de culturas. Eles buscam melhorar a eficiência no uso de água, energia, fertilizantes e pesticidas, reduzindo o desperdício e minimizando os impactos ambientais. Os modelos de cultivo eficientes visam aumentar a produtividade agrícola, promover a sustentabilidade ambiental e garantir a disponibilidade de alimentos de qualidade para a população.
@@ -31,7 +35,7 @@
      
         </div>
     </section>
-    <footer class="roda-pe">
+    <footer class="roda-pe2">
         <div>
             <p>integrantes</p>
             <ul>
