roda-pe fixado ao final da pagina

--- a/paginas/formulario.html
+++ b/paginas/formulario.html
@@ -20,6 +20,22 @@
                 <li><a href="modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
             </ul>
         </nav>
+
     </header>
+
+    <footer>
+        
+        <div class="roda-pe">
+            <p>integrantes</p>
+            <ul>
+                <li>Derick S. / rm551007</li>
+                <li>Razyel Ferrari / rm551875</li>
+                <li>Rayzor Anael / rm551832</li>
+                <li>Kalel Schlichting / rm550620</li>
+                <li>Jerry Bryan / rm98438</li>
+            </ul>
+        </div>
+    </footer>
+
 </body>
 </html>
