--- a/paginas/formulario.html
+++ b/paginas/formulario.html
@@ -30,7 +30,7 @@
         <div class="contact-box">
           <div class="left"></div>
           <div class="right">
-            <h2>Contact Us</h2>
+            <h2>Junte-se ao nosso projeto</h2>
             <input type="text" class="field" placeholder="Your Name">
             <input type="text" class="field" placeholder="Your Email">
             <input type="text" class="field" placeholder="Phone">
