Index html arrumado

--- a/index.html
+++ b/index.html
@@ -6,24 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <nav>
-            <ul>
-                <li><a href="paginas/agricultura sustentável.html">Agricultura Sustentavel</a></li>
-                <li><a href="paginas/formulario.html">FORMULARIO</a></li>
-                <li><a href="paginas/Inteligências Artificiais generativas.html">Inteligências Artificiais</a></li>
-                <li><a href="paginas/modelos de cultivo eficientes.html">modelos de cultivo</a></li>
-            </ul>
-        </nav>
-    </header>
+  <nav>
+    <div class="logo">
+        <img src="img/save.png" alt="Logo Image">
+    </div>
+    <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+    <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+        <li><a href="/paginas/Inteligências-artificiais-generativas.html">Inteligências Artificiais</a></li>
+        <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
+        <li><a href="/paginas/formulario.html">Junte-se a nós</a></li>
+    </ul>
+</nav>
 
     <main>
     <section class="conteudo-back">
       <h1>Bem-vindo</h1>
       <p>Melhorando a saúde e o bem-estar</p>
-      <a href="#" class="btn">saber mais</a>
+      <a href="#" class="btn">Saber Mais</a>
     </section>
 
     <section class="cards">
@@ -34,7 +42,7 @@
       </div>
       <div class="card">
         <img src="img/ai-cloud-concept-with-robot-arm.jpg" alt="Inteligências Artificiais">
-        <h2>Inteligências ARTIFICIAS</h2>
+        <h2>Inteligências Artificiais</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <div class="card">
@@ -63,5 +71,7 @@
             </ul>
         </div>
     </footer>
+
+    <script src="../js/nav.js"></script>
 </body>
 </html>
