--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
-        <li><a href="/paginas/Inteligências-artificiais-generativas.html">Inteligências Artificiais</a></li>
+        <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
         <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
         <li><a href="/paginas/formulario.html">Junte-se a nós</a></li>
     </ul>
