nav-bar update with new one

--- a/paginas/formulario.html
+++ b/paginas/formulario.html
@@ -9,22 +9,26 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/formulario.css">
 </head>
 <body>
-    <header class="cabecalho">
+    <nav>
         <div class="logo">
-
+            <img src="../img/save.png" alt="Logo Image">
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="agricultura sustentável.html">Agricultura Sustentavel</a></li>
-                <li><a href="Inteligências Artificiais generativas.html">Inteligências ARTIFICIAS</a></li>
-                <li><a href="modelos de cultivo eficientes.html">MODELO DE CULTIVO</a></li>
-            </ul>
-        </nav>
-
-    </header>
+        <div class="hamburger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <ul class="nav-links">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+            <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
+            <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
+            <li><a href="/paginas/formulario.html">Junte-se a nós</a></li>
+        </ul>
+    </nav>
     
     <div class="container">
         <div class="contact-box">
@@ -52,6 +56,7 @@
             </ul>
         </div>
     </footer>
+    <script src="../js/nav.js"></script>
 
 </body>
 </html>
