--- a/index.html
+++ b/index.html
@@ -37,24 +37,25 @@
     <section class="cards">
       <div class="card">
         <img src="img/agricultura-sustentavel.jpg" alt="Feature 1">
-        <h2>Agricultura Sustentavel</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h2>Agricultura Sustentável</h2>
+        <p>Agricultura sustentável é essencial para o futuro do planeta.</p>
       </div>
       <div class="card">
         <img src="img/ai-cloud-concept-with-robot-arm.jpg" alt="Inteligências Artificiais">
         <h2>Inteligências Artificiais</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Inteligências artificiais revolucionam a sociedade moderna.</p>
       </div>
       <div class="card">
         <img src="img/senior-hardworking-farmer-agronomist-soybean-field-checking-crops-before-harvest.jpg" alt="modelos de cultivo">
-        <h2>modelos de cultivo</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h2>Modelos de cultivo</h2>
+        <p>Aprimorar modelos de cultivo é essencial para 
+          impulsionar a produtividade agrícola</p>
       </div>
     </section>
 
     <section class="testimonial">
       <blockquote>
-        <p>"Eu vi uma tremenda melhora na minha saúde depois de implementar as técnicas da ######. Altamente recomendado!"</p>
+        <p>"Eu vi uma tremenda melhora na minha saúde depois de implementar as técnicas do DreamTeam Altamente recomendado!"</p>
         <cite>- Derick Santos, o brabo</cite>
       </blockquote>
     </section>
