conteudo modelos de cultivo

--- a/paginas/modelos de cultivo eficientes.html
+++ b/paginas/modelos de cultivo eficientes.html
@@ -23,8 +23,9 @@
     </header>
     <section class="conteudo-back4">
         <h1>modelos de cultivo</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
-    </section>    
+        <p>Modelos de cultivo eficiente impulsionam a produtividade agrícola e promovem a sustentabilidade ambiental.</p>
+    </section>
+    <section>     
         <section class="conteudo">
         <div class="conteudo-tit">
         <h2>modelos de cultivo</h2>
