erros de português e links arrumados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -19,7 +19,7 @@
         <div class="line3"></div>
     </div>
     <ul class="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="#">Menu</a></li>
         <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
         <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
@@ -55,14 +55,14 @@
 
     <section class="testimonial">
       <blockquote>
-        <p>"Eu vi uma tremenda melhora na minha saúde depois de implementar as técnicas do DreamTeam Altamente recomendado!"</p>
+        <p>"Eu vi uma tremenda melhora na minha saúde depois de implementar as técnicas do DreamTeam, altamente recomendado!"</p>
         <cite>- Derick Santos, o brabo</cite>
       </blockquote>
     </section>
   </main>
     <footer>
         <div class="roda-pe">
-            <p>integrantes</p>
+            <p>Integrantes</p>
             <ul>
                 <li>Derick S. / rm551007</li>
                 <li>Razyel Ferrari / rm551875</li>
