--- a/paginas/agricultura-sustentavel.html
+++ b/paginas/agricultura-sustentavel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>agricultura sustentável</title>
+    <title>Agricultura Sustentável</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/agricultura-sustentavel.css">
 
@@ -20,11 +20,11 @@
             <div class="line3"></div>
         </div>
         <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Menu</a></li>
             <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
             <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="/paginas/formulario.html">Junte-se a nós</a></li>
         </ul>
     </nav>
     <section class="conteudo-back2">
@@ -44,7 +44,7 @@
     </section>
     <footer class="roda-pe2">
         <div>
-            <p>integrantes</p>
+            <p>Integrantes</p>
             <ul>
                 <li>Derick S. / rm551007</li>
                 <li>Razyel Ferrari / rm551875</li>
