--- a/paginas/modelos-de-cultivo-eficientes.html
+++ b/paginas/modelos-de-cultivo-eficientes.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../index.html">Menu</a></li>
                 <li><a href="formulario.html">FORMULARIO</a></li>
-                <li><a href="agricultura sustentável.html">AGRICULTIRA SUSTENTAVEL</a></li>
+                <li><a href="agricultura sustentável.html">Agricultura Sustentável</a></li>
                 <li><a href="Inteligências Artificiais generativas.html">Inteligências Artificiais Generativas</a></li>
             </ul>
         </nav>
