erros arrumados e css adicionado

--- a/paginas/inteligencias-artificiais-generativas.html
+++ b/paginas/inteligencias-artificiais-generativas.html
@@ -29,7 +29,7 @@
     <section class="conteudo-back3">
         <div class="conteudo-tit">
         <h1>Inteligências Artificiais Generativas</h1>
-        <p>Lorem ipsurum deserunt accusamus fugiat quisquam voluptates accusantium?</p>
+        <p>Tudo sobre inteligências artificiais generativas</p>
         </section>
         <section class="conteudo">
         </div class="conteudo-tit">
