--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <img src="img/senior-hardworking-farmer-agronomist-soybean-field-checking-crops-before-harvest.jpg" alt="modelos de cultivo">
         <h2>Modelos de cultivo</h2>
         <p>Aprimorar modelos de cultivo é essencial para 
-          impulsionar a produtividade agrícola</p>
+          impulsionar a produtividade agrícola.</p>
       </div>
     </section>
 
     <section class="testimonial">
       <blockquote>
         <p>"Eu vi uma tremenda melhora na minha saúde depois de implementar as técnicas do DreamTeam, altamente recomendado!"</p>
-        <cite>- Derick Santos, o brabo</cite>
+        <cite>- Derick Santos, o brabo.</cite>
       </blockquote>
     </section>
   </main>
