--- a/paginas/modelos-de-cultivo-eficientes.html
+++ b/paginas/modelos-de-cultivo-eficientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>modelos de cultivo eficientes</title>
+    <title>Modelos de Cultivo Eficientes</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Menu</a></li>
-                <li><a href="formulario.html">FORMULARIO</a></li>
+                <li><a href="formulario.html">Formulário</a></li>
                 <li><a href="agricultura sustentável.html">Agricultura Sustentável</a></li>
                 <li><a href="Inteligências Artificiais generativas.html">Inteligências Artificiais Generativas</a></li>
             </ul>
