--- a/paginas/modelos-de-cultivo-eficientes.html
+++ b/paginas/modelos-de-cultivo-eficientes.html
@@ -6,29 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelos de Cultivo Eficientes</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/modelo-de-cultivo.css">
 </head>
 <body>
-    <header class="cabecalho">
+    <nav>
         <div class="logo">
-
+            <img src="../img/save.png" alt="Logo Image">
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Menu</a></li>
-                <li><a href="formulario.html">Formulário</a></li>
-                <li><a href="agricultura sustentável.html">Agricultura Sustentável</a></li>
-                <li><a href="Inteligências Artificiais generativas.html">Inteligências Artificiais Generativas</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="hamburger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <ul class="nav-links">
+            <li><a href="../index.html">Menu</a></li>
+            <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
+            <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
+            <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
+            <li><a href="/paginas/formulario.html">Junte-se a nós</a></li>
+        </ul>
+    </nav>
     <section class="conteudo-back4">
-        <h1>modelos de cultivo</h1>
-        <p>Modelos de cultivo eficiente impulsionam a produtividade agrícola e promovem a sustentabilidade ambiental.</p>
+        <h1>Modelos de Cultivo</h1>
+        <p>Modelos de cultivo eficientes impulsionam a produtividade agrícola e promovem a sustentabilidade ambiental.</p>
     </section>
     <section>     
         <section class="conteudo">
         <div class="conteudo-tit">
-        <h2>modelos de cultivo</h2>
+        <h2>Modelos de Cultivo</h2>
         </div>
         <p>
             Os modelos de cultivo eficientes são estratégias agrícolas que visam maximizar a produção de alimentos de forma sustentável, otimizando o uso de recursos naturais. Esses modelos incluem abordagens como agricultura de precisão, hidroponia, agricultura vertical, aquaponia, agrofloresta e rotação de culturas. Eles buscam melhorar a eficiência no uso de água, energia, fertilizantes e pesticidas, reduzindo o desperdício e minimizando os impactos ambientais. Os modelos de cultivo eficientes visam aumentar a produtividade agrícola, promover a sustentabilidade ambiental e garantir a disponibilidade de alimentos de qualidade para a população.
