--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="line3"></div>
     </div>
     <ul class="nav-links">
-        <li><a href="#">Menu</a></li>
+        <li><a href="/index.html">Menu</a></li>
         <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
         <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
         <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
