--- a/paginas/inteligencias-artificiais-generativas.html
+++ b/paginas/inteligencias-artificiais-generativas.html
@@ -22,7 +22,7 @@
             <li><a href="../index.html">Menu</a></li>
             <li><a href="/paginas/agricultura-sustentavel.html">Agricultura Sustentável</a></li>
             <li><a href="/paginas/inteligencias-artificiais-generativas.html">Inteligências Artificiais</a></li>
-            <li><a href="#">Serviços</a></li>
+            <li><a href="/paginas/modelos-de-cultivo-eficientes.html">Modelos de cultivo</a></li>
             <li><a href="/paginas/formulario.html">Junte-se a nós</a></li>
         </ul>
     </nav>
